# app6_weather_api

./: README.md  main.py  pyproject.toml
templates/: home.html
